libqb (0.17.1-2) UNRELEASED; urgency=medium

  * Enable __attribute__((section())) on powerpc, it was hardcoded
    "no" in configure.ac.

 -- Christoph Berg <myon@debian.org>  Fri, 15 May 2015 18:53:48 +0200

libqb (0.17.1-1) unstable; urgency=medium

  [ Richard B Winters ]
  * New upstream release
  * debian/patches: Dropped all 0.17.0 patches as they are not needed in new 
    release
  * debian/patches: Added patch for creating .tarball-version prior to build
  * debian/patches: Added patch for creating ChangeLog prior to build
    - All patches run through GBP PQ; resulting in serialized file names, the
      patch files were not given serialized names previously
  * debian/rules: Updated hardening implementation for debhelper 9
  * debian/rules: Updated to remove *.la files as they are not needed in this
    package
  * debian/rules: Updated to override dh_auto_configure, and set the docdir as
    well as to enable dependency tracking option
  * debian/rules: Updated to remove COPYING from debian/tmp after auto_install,
    which resolves a lintian notice due to mutliple copies of license
  * debian/rules: Updated to provide method for creating a debug package
  * debian/rules: Fixed spacing between overrides so everything matches
  * debian/control: Added myself as an uploader
  * debian/control: Added libqb0-dbg to the package offering
  * debian/control: Dropped hardening-wrapper, using hardening via debhelper
    9; (see https://wiki.debian.org/Hardening)
  * debian/control: Added glib2.0-dev to build-depends in order to make glib
    tests available in this package
  * debian/control: Bump Standards-Version
      - No changes required
  * debian/control: Updated Homepage
  * debian/control: Added Vcs-Git and Vcs-Browser
  * debian/control: Fixed formatting for enabling folding
  * debian/compat: Bump to level 9
  * debian/libqb0.symbols: Added for better cross-dist-version support
  * debian/watch: Added watch for github releases