@@ -2,6 +2,7 @@ libqb (0.17.1-2) UNRELEASED; urgency=medium
 
   * Enable __attribute__((section())) on powerpc, it was hardcoded
     "no" in configure.ac.
+  * Ignore testsuite results on kfreebsd-* for now.
 
  -- Christoph Berg <myon@debian.org>  Fri, 15 May 2015 18:53:48 +0200
 
